--- a/schedule/yast/encryption/lvm_encrypt_separate_boot.yaml
+++ b/schedule/yast/encryption/lvm_encrypt_separate_boot.yaml
@@ -38,8 +38,8 @@ schedule:
   - installation/await_install
   - installation/logs_from_installation_system
   - installation/reboot_after_installation
-  - {{boot_encrypt_reconnect_mgmt_console}}
-  - {{grub_test_boot_encrypt}}
+  - '{{boot_encrypt_reconnect_mgmt_console}}'
+  - '{{grub_test_boot_encrypt}}'
   - installation/first_boot
   - console/hostname
   - console/system_prepare
