--- a/schedule/functional/extra_tests_textmode_mod_desktop.yaml
+++ b/schedule/functional/extra_tests_textmode_mod_desktop.yaml
@@ -24,9 +24,9 @@ conditional_schedule:
                 - console/aplay
                 - console/wavpack
 schedule:
-    - {{bootloader}}
+    - '{{bootloader}}'
     - boot/boot_to_desktop
     - console/prepare_test_data
     - console/consoletest_setup
-    - {{tests_requiring_soundcard}}
+    - '{{tests_requiring_soundcard}}'
     - console/libvorbis
