--- a/schedule/qam/15/qam-allpatterns.yaml
+++ b/schedule/qam/15/qam-allpatterns.yaml
@@ -31,7 +31,7 @@ schedule:
 - console/ncurses
 - console/yast2_lan
 - console/curl_https
-- {{salt}}
+- '{{salt}}'
 - console/glibc_sanity
 - console/zypper_in
 - console/yast2_i
