--- a/schedule/qam/15/qam-gnome.yaml
+++ b/schedule/qam/15/qam-gnome.yaml
@@ -2,7 +2,7 @@
 name: qam-gnome
 schedule:
 - autoyast/prepare_profile
-- {{boot}}
+- '{{boot}}'
 - autoyast/installation
 - autoyast/console
 - autoyast/login
@@ -11,7 +11,7 @@ schedule:
 - autoyast/clone
 - autoyast/logs
 - autoyast/autoyast_reboot
-- {{grub}}
+- '{{grub}}'
 - installation/first_boot
 - qa_automation/patch_and_reboot
 - console/system_prepare
@@ -24,13 +24,13 @@ schedule:
 - console/textinfo
 - console/hostname
 - console/installation_snapshots
-- {{x86_64_tests}}
+- '{{x86_64_tests}}'
 - console/zypper_lr
 - console/zypper_ref
 - console/ncurses
 - console/yast2_lan
 - console/curl_https
-- {{salt}}
+- '{{salt}}'
 - console/zypper_in
 - console/yast2_i
 - console/yast2_bootloader
@@ -52,7 +52,7 @@ schedule:
 - x11/gnome_terminal
 - x11/gedit
 - x11/firefox
-- {{sled_tests}}
+- '{{sled_tests}}'
 - x11/yast2_snapper
 - x11/glxgears
 - x11/nautilus
