--- a/schedule/yast/btrfs/btrfs_sle_libstorage-ng.yaml
+++ b/schedule/yast/btrfs/btrfs_sle_libstorage-ng.yaml
@@ -6,12 +6,12 @@ vars:
   FILESYSTEM: btrfs
 schedule:
   # Called on BACKEND: qemu
-  - {{isosize}}
+  - '{{isosize}}'
   - installation/bootloader_start
   - installation/welcome
   - installation/accept_license
   # Called only on BACKEND: s390x
-  - {{disk_activation}}
+  - '{{disk_activation}}'
   - installation/scc_registration
   - installation/addon_products_sle
   - installation/system_role
@@ -20,7 +20,7 @@ schedule:
   - installation/partitioning_finish
   - installation/installer_timezone
   # Called on all, except BACKEND: s390x
-  - {{hostname_inst}}
+  - '{{hostname_inst}}'
   - installation/user_settings
   - installation/user_settings_root
   - installation/resolve_dependency_issues
@@ -31,14 +31,14 @@ schedule:
   - installation/logs_from_installation_system
   - installation/reboot_after_installation
   # Called on BACKEND: s390x, svirt
-  - {{reconnect_mgmt_console}}
+  - '{{reconnect_mgmt_console}}'
   # Called on BACKEND: qemu
-  - {{grub_test}}
+  - '{{grub_test}}'
   - installation/first_boot
-  - {{check_resume}}
+  - '{{check_resume}}'
   - console/validate_no_cow_attribute
   # On all the backends except s390x, /home is located on a separate partition
-  - {{validate_home_partition}}
+  - '{{validate_home_partition}}'
 conditional_schedule:
   isosize:
     BACKEND:
