--- a/schedule/yast/iscsi/iscsi_normal_auth_backstore_lvm.yaml
+++ b/schedule/yast/iscsi/iscsi_normal_auth_backstore_lvm.yaml
@@ -25,4 +25,4 @@ conditional_schedule:
                 - iscsi/iscsi_client
 schedule:
     - boot/boot_to_desktop
-    - {{iscsi}}
+    - '{{iscsi}}'
