--- a/schedule/yast/yast2_cmd.yaml
+++ b/schedule/yast/yast2_cmd.yaml
@@ -16,7 +16,7 @@ conditional_schedule:
       x86_64:
         - yast2_cmd/yast_keyboard
 schedule:
-  - {{bootloader_zkvm}}
+  - '{{bootloader_zkvm}}'
   - boot/boot_to_desktop
   - yast2_cmd/yast_rdp
   - yast2_cmd/yast_timezone
@@ -26,5 +26,5 @@ schedule:
   - yast2_cmd/yast_tftp_server
   - yast2_cmd/yast_lan
   - yast2_cmd/yast_users
-  - {{yast_keyboard}}
+  - '{{yast_keyboard}}'
   - yast2_cmd/yast_sysconfig
