--- a/schedule/yast/autoyast_y2_firstboot.yaml
+++ b/schedule/yast/autoyast_y2_firstboot.yaml
@@ -2,7 +2,7 @@ name:           autoyast_y2_firstboot
 description:    >
     Smoke test for YaST2 firstboot module
 vars:
-    YAST2_FIRSTBOOT_USERNAME: y2_firstboot_tester
+    YAST2_FIRSTBOOT_USERNAME: firstbootuser
 schedule:
     - autoyast/prepare_profile
     - installation/isosize
