--- a/schedule/qam/12-SP3/mau-extratests.yaml
+++ b/schedule/qam/12-SP3/mau-extratests.yaml
@@ -15,10 +15,10 @@ schedule:
 - console/libvorbis
 - console/command_not_found
 - console/openssl_alpn
-- console/autoyast_removed
 - console/cron
 - console/syslog
 - console/mta
+- console/vsftpd
 - console/yast2_lan_device_settings
 - console/check_default_network_manager
 - console/git
