--- a/schedule/qam/12-SP5/mau-filesystem.yaml
+++ b/schedule/qam/12-SP5/mau-filesystem.yaml
@@ -1,6 +1,6 @@
 ---
 name: mau-filesystem
-description: Filesystem tests on Maintenance prepared image 
+description: Filesystem tests on Maintenance prepared image
 vars:
   COLLECT_COREDUMPS: '1'
 schedule:
@@ -15,6 +15,7 @@ schedule:
 - console/btrfs_qgroups
 - console/snapper_cleanup
 - console/btrfs_send_receive
+- console/btrfsmaintenance
 - console/snapper_undochange
 - console/snapper_create
 - console/snapper_thin_lvm
