Enable and start chronyd if SUT is SLE

--- a/schedule/qam/15-SP1/mau-extratests.yaml
+++ b/schedule/qam/15-SP1/mau-extratests.yaml
@@ -51,6 +51,7 @@ schedule:
 - console/rpcbind
 - sysauth/sssd
 - console/timezone
+- console/ntp_client
 - console/procps
 - '{{lshw}}'
 - console/kmod
