--- a/schedule/functional/extra_tests_gnome.yaml
+++ b/schedule/functional/extra_tests_gnome.yaml
@@ -15,13 +15,21 @@ conditional_schedule:
                 - installation/bootloader_svirt
             'svirt-xen-hvm':
                 - installation/bootloader_svirt
+    user_defined_snapshot:
+        ARCH:
+            'aarch64':
+                - x11/user_defined_snapshot
+            'ppc64le':
+                - x11/user_defined_snapshot
+            'x86_64':
+                - x11/user_defined_snapshot
 schedule:
     - '{{bootloader}}'
     - boot/boot_to_desktop
     - console/prepare_test_data
     - console/consoletest_setup
     - x11/vnc_two_passwords
-    - x11/user_defined_snapshot
+    - '{{user_defined_snapshot}}'
     - x11/remote_desktop/vino_screensharing_available
     - x11/rrdtool_x11
     - x11/yast2_lan_restart
