--- a/schedule/qam/12-SP2/mau-extratests.yaml
+++ b/schedule/qam/12-SP2/mau-extratests.yaml
@@ -15,9 +15,11 @@ schedule:
 - console/libvorbis
 - console/command_not_found
 - console/openssl_alpn
+- console/autoyast_removed
 - console/cron
 - console/syslog
 - console/mta
+- console/yast2_lan_device_settings
 - console/check_default_network_manager
 - console/git
 - console/cups
