--- a/schedule/qam/15-SP1/mau-extratests.yaml
+++ b/schedule/qam/15-SP1/mau-extratests.yaml
@@ -16,10 +16,11 @@ schedule:
 - console/libvorbis
 - console/command_not_found
 - console/openssl_alpn
+- console/autoyast_removed
 - console/cron
 - console/syslog
 - console/mta
-- console/vsftpd
+- '{{yast2_lan_device_settings}}'
 - console/check_default_network_manager
 - console/git
 - console/cups
@@ -75,6 +76,10 @@ conditional_schedule:
       x86_64:
         - console/aplay
         - console/wavpack
+  yast2_lan_device_settings:
+    ARCH:
+      x86_64:
+        - console/yast2_lan_device_settings
   lshw:
     ARCH:
       x86_64:
