--- a/schedule/hpc/create_hdd_hpc_textmode.yaml
+++ b/schedule/hpc/create_hdd_hpc_textmode.yaml
@@ -17,8 +17,12 @@ conditional_schedule:
         - installation/bootloader_uefi
       x86_64:
         - installation/bootloader
+  isosize:
+    VERSION:
+      15-SP2:
+        - installation/isosize
 schedule:
-  - installation/isosize
+  - '{{isosize}}'
   - '{{bootloader}}'
   - installation/welcome
   - installation/accept_license
