--- a/schedule/functional/extra_tests_textmode_containers.yaml
+++ b/schedule/functional/extra_tests_textmode_containers.yaml
@@ -17,6 +17,7 @@ conditional_schedule:
 schedule:
     - '{{bootloader}}'
     - boot/boot_to_desktop
+    - console/podman
     - console/docker
     - console/docker_runc
     - console/docker_image
