--- a/schedule/qam/15-SP2/qam-create_hdd_sles4sap_gnome.yml
+++ b/schedule/qam/15-SP2/qam-create_hdd_sles4sap_gnome.yml
@@ -7,6 +7,7 @@ schedule:
   - installation/welcome
   - installation/accept_license
   - installation/scc_registration
+  - '{{update_test_repo}}'
   - installation/addon_products_sle
   - installation/system_role
   - installation/sles4sap_product_installation_mode
@@ -30,3 +31,8 @@ schedule:
   - shutdown/grub_set_bootargs
   - shutdown/cleanup_before_shutdown
   - shutdown/shutdown
+conditional_schedule:
+  update_test_repo:
+    QAM_INCI:
+      1:
+        - installation/add_update_test_repo
