Add podman_image to containers testsuite

--- a/schedule/functional/extra_tests_textmode_containers.yaml
+++ b/schedule/functional/extra_tests_textmode_containers.yaml
@@ -18,6 +18,7 @@ schedule:
     - '{{bootloader}}'
     - boot/boot_to_desktop
     - console/podman
+    - console/podman_image
     - console/docker
     - console/docker_runc
     - console/docker_image
