--- a/schedule/functional/extra_tests_gnome_sdk.yaml
+++ b/schedule/functional/extra_tests_gnome_sdk.yaml
@@ -1,5 +1,6 @@
-name:   extra_test_gnome_sdk
-description:    >
+---
+name: extra_test_gnome_sdk
+description: >
     Maintainer: jrauch
     Extra tests about software in sdk on gnome
 conditional_schedule:
@@ -14,10 +15,21 @@ conditional_schedule:
                 - installation/bootloader_svirt
             'svirt-xen-hvm':
                 - installation/bootloader_svirt
+    libqt5_qtbase:
+        ARCH:
+            'aarch64':
+                - x11/libqt5_qtbase
+            'x86_64':
+                - x11/libqt5_qtbase
+            'ppc64le':
+                - x11/libqt5_qtbase
+        MACHINE:
+            'svirt-xen-hvm':
+                - x11/libqt5_qtbase
 schedule:
     - '{{bootloader}}'
     - boot/boot_to_desktop
     - console/prepare_test_data
     - console/consoletest_setup
-    - x11/libqt5_qtbase
+    - '{{libqt5_qtbase}}'
     - console/coredump_collect
