Schedule docker_compose in extra_tests_containers

--- a/schedule/containers/extra_tests_textmode_containers.yaml
+++ b/schedule/containers/extra_tests_textmode_containers.yaml
@@ -22,5 +22,6 @@ schedule:
     - console/docker
     - console/docker_runc
     - console/docker_image
+    - console/docker_compose
     - console/zypper_docker
     - console/coredump_collect
