--- a/data/containers/docker-compose.yml
+++ b/data/containers/docker-compose.yml
@@ -1,63 +1,31 @@
 version: "3.3"
 services:
 
-  redis:
-    image: redis:alpine
-    ports:
-      - "6379"
-    networks:
-      - frontend
-    restart: on-failure
-
-  db:
-    image: postgres:9.4
-    volumes:
-      - db-data:/var/lib/postgresql/data
+  nginx:
+    image: nginx
     networks:
       - backend
+    volumes:
+      - www:/usr/share/nginx/html
     restart: on-failure
-    environment:
-      - POSTGRES_PASSWORD=nots3cr3t
 
-  vote:
-    image: dockersamples/examplevotingapp_vote:before
+  haproxy:
+    image: haproxy
+    volumes:
+      - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
     ports:
-      - "5000:80"
+      - "8080:80"
     networks:
+      - backend
       - frontend
     depends_on:
-      - redis
+      - nginx
     restart: on-failure
-
-  result:
-    image: dockersamples/examplevotingapp_result:before
-    ports:
-      - "5001:80"
-    networks:
-      - backend
-    depends_on:
-      - db
-    restart: on-failure
-
-  worker:
-    image: dockersamples/examplevotingapp_worker
-    networks:
-      - frontend
-      - backend
-    restart: on-failure
-
-  visualizer:
-    image: dockersamples/visualizer:stable
-    ports:
-      - "8080:8080"
-    stop_grace_period: 1m30s
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock"
 
 networks:
   frontend:
   backend:
 
 volumes:
-  db-data:
+  www:
 
