--- a/schedule/yast/yast2_cmd.yaml
+++ b/schedule/yast/yast2_cmd.yaml
@@ -18,13 +18,13 @@ conditional_schedule:
 schedule:
   - '{{bootloader_zkvm}}'
   - boot/boot_to_desktop
-  - yast2_cmd/yast_rdp
-  - yast2_cmd/yast_timezone
-  - yast2_cmd/yast_ftp_server
-  - yast2_cmd/yast_nfs_server
-  - yast2_cmd/yast_nfs_client
-  - yast2_cmd/yast_tftp_server
-  - yast2_cmd/yast_lan
-  - yast2_cmd/yast_users
+  #- yast2_cmd/yast_rdp
+  #- yast2_cmd/yast_timezone
+  #- yast2_cmd/yast_ftp_server
+  #- yast2_cmd/yast_nfs_server
+  #- yast2_cmd/yast_nfs_client
+  #- yast2_cmd/yast_tftp_server
+  #- yast2_cmd/yast_lan
+  #- yast2_cmd/yast_users
   - '{{yast_keyboard}}'
-  - yast2_cmd/yast_sysconfig
+  #- yast2_cmd/yast_sysconfig
