Virtio console on ppc64le requires system_prepare
schedule system_prepare ASAP to prepare /dev/hvc for virtio console
https://progress.opensuse.org/issues/18980
https://progress.opensuse.org/issues/67120
https://progress.opensuse.org/issues/67174

--- a/schedule/qam/12-SP1/mau-extratests.yaml
+++ b/schedule/qam/12-SP1/mau-extratests.yaml
@@ -2,6 +2,7 @@
 name: mau-extratests
 schedule:
 - boot/boot_to_desktop
+- console/system_prepare
 - console/prepare_test_data
 - console/consoletest_setup
 - console/check_os_release
