Use YAML::PP to include test data
Previously, $include custom key was used to include one YAML file
into another (e.g. for test_data).

YAML::PP supports that out of the box, so the commit changes the
behavior to use the library instead of the $include custom key.

Related ticket: https://progress.opensuse.org/issues/66206

--- a/schedule/yast/autoyast_home_encrypted.yaml
+++ b/schedule/yast/autoyast_home_encrypted.yaml
@@ -15,9 +15,9 @@ schedule:
   - autoyast/clone
   - autoyast/verify_cloned_profile
 test_data:
+  <<: !include test_data/yast/encryption/encrypt_home.yaml
   crypttab:
     num_devices_encrypted: 1
-  $include: test_data/yast/encryption/encrypt_home.yaml
   profile:
     partitioning:
       - drive:
