--- a/schedule/yast/btrfs/btrfs_sle_libstorage_spvm.yaml
+++ b/schedule/yast/btrfs/btrfs_sle_libstorage_spvm.yaml
@@ -33,6 +33,6 @@ schedule:
   - console/verify_separate_home
   - console/validate_file_system
 test_data:
+  <<: !include test_data/yast/btrfs/btrfs_sle_libstorage.yaml
   device: sda
   table_type: gpt
-  $include: test_data/yast/btrfs/btrfs_sle_libstorage.yaml
