--- a/schedule/yast/ext4/ext4@yast-s390x-disk-activation.yaml
+++ b/schedule/yast/ext4/ext4@yast-s390x-disk-activation.yaml
@@ -31,6 +31,6 @@ schedule:
   - installation/first_boot
   - console/validate_ext4_fs
 test_data:
+  <<: !include test_data/yast/ext4/ext4_no_separate_home.yaml
   device: /dev/dasda
   table_type: dasd
-  $include: test_data/yast/ext4/ext4_no_separate_home.yaml
