--- a/schedule/yast/ext4/ext4@yast-xen-hvm.yaml
+++ b/schedule/yast/ext4/ext4@yast-xen-hvm.yaml
@@ -29,6 +29,6 @@ schedule:
   - installation/first_boot
   - console/validate_ext4_fs
 test_data:
+  <<: !include test_data/yast/ext4/ext4.yaml
   device: /dev/xvdb
   table_type: gpt
-  $include: test_data/yast/ext4/ext4.yaml
