--- a/schedule/yast/ext4/ext4@yast_spvm.yaml
+++ b/schedule/yast/ext4/ext4@yast_spvm.yaml
@@ -33,6 +33,6 @@ schedule:
   - installation/first_boot
   - console/validate_ext4_fs
 test_data:
+  <<: !include test_data/yast/ext4/ext4.yaml
   device: /dev/sda
   table_type: gpt
-  $include: test_data/yast/ext4/ext4.yaml
