--- a/schedule/yast/raid/raid0_opensuse_gpt_uefi.yaml
+++ b/schedule/yast/raid/raid0_opensuse_gpt_uefi.yaml
@@ -32,4 +32,4 @@ schedule:
   - shutdown/grub_set_bootargs
   - console/validate_raid
 test_data:
-  $include: test_data/yast/raid/raid0_gpt_uefi_test_data.yaml
+  <<: !include test_data/yast/raid/raid0_gpt_uefi_test_data.yaml
