--- a/schedule/yast/raid/raid0_sle_gpt.yaml
+++ b/schedule/yast/raid/raid0_sle_gpt.yaml
@@ -33,6 +33,7 @@ schedule:
   - shutdown/grub_set_bootargs
   - console/validate_raid
 test_data:
+  <<: !include test_data/yast/raid/raid_gpt_disks_with_bios-boot.yaml
   mds:
     - raid_level: 0
       chunk_size: 64
@@ -53,4 +54,3 @@ test_data:
           filesystem: swap
         mounting_options:
           should_mount: 1
-  $include: test_data/yast/raid/raid_gpt_disks_with_bios-boot.yaml
