--- a/schedule/yast/raid/raid0_sle_msdos_prep_boot.yaml
+++ b/schedule/yast/raid/raid0_sle_msdos_prep_boot.yaml
@@ -33,4 +33,4 @@ schedule:
   - shutdown/grub_set_bootargs
   - console/validate_raid
 test_data:
-  $include: test_data/yast/raid/raid_msdos_prep_boot_test_data.yaml
+  <<: !include test_data/yast/raid/raid_msdos_prep_boot_test_data.yaml
