--- a/schedule/yast/raid/raid10_sle_gpt_uefi.yaml
+++ b/schedule/yast/raid/raid10_sle_gpt_uefi.yaml
@@ -33,4 +33,4 @@ schedule:
   - shutdown/grub_set_bootargs
   - console/validate_raid
 test_data:
-  $include: test_data/yast/raid/raid10_gpt_uefi_test_data.yaml
+  <<: !include test_data/yast/raid/raid10_gpt_uefi_test_data.yaml
