--- a/schedule/yast/raid/raid5_opensuse_gpt.yaml
+++ b/schedule/yast/raid/raid5_opensuse_gpt.yaml
@@ -32,6 +32,7 @@ schedule:
   - shutdown/grub_set_bootargs
   - console/validate_raid
 test_data:
+  <<: !include test_data/yast/raid/raid_gpt_disks_with_bios-boot.yaml
   mds:
     - raid_level: 5
       chunk_size: 64
@@ -52,4 +53,3 @@ test_data:
           filesystem: swap
         mounting_options:
           should_mount: 1
-  $include: test_data/yast/raid/raid_gpt_disks_with_bios-boot.yaml
