--- a/test_data/yast/encryption/encrypt_no_lvm.yaml
+++ b/test_data/yast/encryption/encrypt_no_lvm.yaml
@@ -1,3 +1,3 @@
 crypttab:
   num_devices_encrypted: 3
-$include: test_data/yast/encryption/default_enc.yaml
+<<: !include test_data/yast/encryption/default_enc.yaml
