--- a/test_data/yast/encryption/full_lvm_enc.yaml
+++ b/test_data/yast/encryption/full_lvm_enc.yaml
@@ -1,3 +1,3 @@
 crypttab:
   num_devices_encrypted: 1
-$include: test_data/yast/encryption/default_enc.yaml
+<<: !include test_data/yast/encryption/default_enc.yaml
