Move yast2 bootloader test modules to YaST job group
I scheduled it on yast2_ncurses_textmode. yast2_bootloader
excluded from functional group
https://gitlab.suse.de/qsf-u/qa-sle-functional-userspace/-/merge_requests/87

--- a/schedule/yast/yast2_ncurses/yast2_ncurses_textmode@svirt-xen-hvm.yaml
+++ b/schedule/yast/yast2_ncurses/yast2_ncurses_textmode@svirt-xen-hvm.yaml
@@ -10,4 +10,5 @@ schedule:
   - console/prepare_test_data
   - console/consoletest_setup
   - console/yast2_i
+  - console/yast2_bootloader
   - console/coredump_collect
