--- a/schedule/yast/yast2_ncurses/yast2_ncurses_textmode.yaml
+++ b/schedule/yast/yast2_ncurses/yast2_ncurses_textmode.yaml
@@ -9,6 +9,7 @@ schedule:
   - console/consoletest_setup
   - console/yast2_lan
   - console/yast2_i
+  - console/yast2_bootloader
   - "{{yast2_lan_device_settings}}"
 conditional_schedule:
   bootloader_start:
