--- a/schedule/yast/yast2_gui/yast2_gui_sle.yaml
+++ b/schedule/yast/yast2_gui/yast2_gui_sle.yaml
@@ -10,21 +10,67 @@ vars:
     SOFTFAIL_BSC1063638: 1
     VALIDATE_ETC_HOSTS: 1
 schedule:
+    - "{{pre_boot_to_desktop}}"
     - boot/boot_to_desktop
     - console/prepare_test_data
     - console/consoletest_setup
     - console/hostname
-    - yast2_gui/yast2_control_center
-    - x11/yast2_lan_restart
-    - yast2_gui/yast2_bootloader
-    - yast2_gui/yast2_datetime
-    - yast2_gui/yast2_firewall
-    - yast2_gui/yast2_hostnames
-    - yast2_gui/yast2_lang
-    - yast2_gui/yast2_network_settings
-    - yast2_gui/yast2_software_management
-    - yast2_gui/yast2_users
-    - yast2_gui/yast2_security
-    - yast2_gui/yast2_lan_restart_bridge
-    - yast2_gui/yast2_lan_restart_vlan
-    - yast2_gui/yast2_lan_restart_bond
+    - "{{yast2_modules}}"
+conditional_schedule:
+    pre_boot_to_desktop:
+        ARCH:
+            aarch64:
+                - boot/uefi_bootmenu
+        BACKEND:
+            svirt:
+                - installation/bootloader_start
+    yast2_modules:
+        ARCH:
+            x86_64:
+                - yast2_gui/yast2_control_center
+                - yast2_gui/yast2_software_management
+                - yast2_gui/yast2_security
+                - yast2_gui/yast2_firewall
+                - yast2_gui/yast2_bootloader
+                - x11/yast2_snapper
+                - yast2_gui/yast2_lang
+                - yast2_gui/yast2_users
+                - yast2_gui/yast2_datetime
+                - yast2_gui/yast2_hostnames
+                - yast2_gui/yast2_network_settings
+                - x11/yast2_lan_restart
+                - yast2_gui/yast2_lan_restart_bridge
+                - yast2_gui/yast2_lan_restart_vlan
+                - yast2_gui/yast2_lan_restart_bond
+            aarch64:
+                - yast2_gui/yast2_software_management
+                - yast2_gui/yast2_security
+                - x11/yast2_snapper
+                - yast2_gui/yast2_users
+                - yast2_gui/yast2_datetime
+                - yast2_gui/yast2_hostnames
+                - yast2_gui/yast2_network_settings
+                - yast2_gui/yast2_lan_restart_bridge
+                - yast2_gui/yast2_lan_restart_vlan
+                - yast2_gui/yast2_lan_restart_bond
+            ppc64le:
+                - yast2_gui/yast2_software_management
+                - yast2_gui/yast2_security
+                - x11/yast2_snapper
+                - yast2_gui/yast2_users
+                - yast2_gui/yast2_datetime
+                - yast2_gui/yast2_hostnames
+                - yast2_gui/yast2_network_settings
+                - yast2_gui/yast2_lan_restart_bridge
+                - yast2_gui/yast2_lan_restart_vlan
+                - yast2_gui/yast2_lan_restart_bond
+            s390x:
+                - yast2_gui/yast2_software_management
+                - yast2_gui/yast2_security
+                - x11/yast2_snapper
+                - yast2_gui/yast2_users
+                - yast2_gui/yast2_datetime
+                - yast2_gui/yast2_hostnames
+                - yast2_gui/yast2_network_settings
+                - yast2_gui/yast2_lan_restart_bridge
+                - yast2_gui/yast2_lan_restart_vlan
