--- a/schedule/yast/autoyast_nfs_share.yaml
+++ b/schedule/yast/autoyast_nfs_share.yaml
@@ -2,6 +2,9 @@
 name: autoyast_multi_btrfs
 description: >
   Test autoyast installation, while using nfs share
+vars:
+  AUTOYAST: autoyast_sle15/autoyast_nfs_share.xml
+  DESKTOP: textmode
 schedule:
   - autoyast/prepare_profile
   - installation/isosize
