--- a/schedule/yast/minimal+base/minimal+base@yast-s390x-disk-activation.yaml
+++ b/schedule/yast/minimal+base/minimal+base@yast-s390x-disk-activation.yaml
@@ -5,6 +5,10 @@ description: >
   all patterns except for "base" and "enhanced_base". Not to be confused with
   the new system role "minimal" introduced with SLE15. Requires disk activation
   and grub is not displayed due to console reconnection.
+vars:
+  DEPENDENCY_RESOLVER_FLAG: 1
+  DESKTOP: textmode
+  PATTERNS: base,minimal
 schedule:
   - installation/bootloader_start
   - installation/welcome
