--- a/schedule/containers/extra_tests_textmode_containers.yaml
+++ b/schedule/containers/extra_tests_textmode_containers.yaml
@@ -17,20 +17,20 @@ conditional_schedule:
     docker_base_images:
         DISTRI:
             'opensuse':
-                - console/container_base_images
+                - containers/container_base_images
     docker_compose:
         DISTRI:
             'opensuse':
-                - console/docker_compose
+                - containers/docker_compose
 schedule:
     - '{{bootloader}}'
     - boot/boot_to_desktop
-    - console/podman
-    - console/podman_image
-    - console/docker
-    - console/docker_runc
-    - console/docker_image
+    - containers/podman
+    - containers/podman_image
+    - containers/docker
+    - containers/docker_runc
+    - containers/docker_image
     - '{{docker_base_images}}'
     - '{{docker_compose}}'
-    - console/zypper_docker
+    - containers/zypper_docker
     - console/coredump_collect
